--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ html {
 body {
     font-family: 'Roboto', sans-serif;
     float: right;
+    background-color: #FFFDF7;
 }
 
 /*  <!-- Navigation verticale / Left Fixed Navbar --> */
@@ -18,12 +19,11 @@ body {
 .nav-gauche {
     width: 260px;
     min-height: 700px;
-    background: black;
+    background:#0A2342;
     position: absolute;
-    position: fixed;
     top: 0px;
     left: 0px;
-    border-right: 1px dashed rgb(255, 255, 255);
+    border-right: 1px dashed black;
     z-index: 5;
     transition: all 0.2s ease-in-out;
     display: flex;
@@ -60,7 +60,7 @@ a:link {
 
 
 .bloc.photo{
-    grid-template-columns: 100px;
+    grid-template-columns: d;
 }
 
 .bloc-items{
@@ -106,7 +106,7 @@ a:link {
 }
 
 .presentation{
-    background-color: rgb(243, 243, 243);
+    background-color: #FFFDF7;
     height: 100vh;
     min-height: 900px;
     width: calc(100% - 300px + 50px);
@@ -158,13 +158,15 @@ h1 {
 h2 {
     font-size: 50px;
     font-family: 'Oswald', sans-serif;
-    padding-top: 50px;
+    padding-top: 70px;
+    padding-bottom: 20px;
     margin-left: 50px;
     text-decoration: underline overline;
+    text-align: center;
 }
 
 .txt-animation {
-    font-size: 40px;
+    font-size: 20;
     margin: 10px 0 10px 60px;
 
 }
@@ -210,7 +212,8 @@ h2 {
 .medias {
     display: flex;
     margin-left: 60px;
-    margin-top: 30px;
+    margin-top: 35px;
+    size: 200px;
 }
 
 .media {
@@ -235,7 +238,7 @@ h2 {
 }
 
 .img-medias{
-    width: 300px;
+    width: 600px;
     padding-top: 30px;
     float: left;
 }
@@ -274,4 +277,164 @@ h2 {
 
 
 
+.section-experiences{
+    background-color: #FFFDF7;
+    width: calc(100% - 260px) ;
+    margin-left: 300px;   
+    height: 600px; 
+    border: 2px solid #333;
 
+}
+
+
+.pres-experiences{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: auto;
+    justify-items: center;
+    justify-content: space-around;
+    position: relative;
+    margin-top: 60px;
+    font-size: 28px;
+
+}
+
+.titre3{
+    font-size: 34px;
+    font-weight: bold;
+}
+
+.img-medias2{
+    position: absolute;
+    margin-left: -150px;
+    width: 340px;
+}
+
+
+
+
+/* Portfolio */
+
+.portfolio{
+    margin-left: 270px;
+    border: 2px solid #333;
+
+}
+
+.cont-portfolio{
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: auto;
+    grid-column-gap: 30px;
+    grid-row-gap: 20px;
+
+}
+
+.item{
+    border: 3px solid black;
+    display: flex;    
+    flex-direction: column;    
+    align-items: center;
+    justify-content: center;
+}
+
+.item p{
+    text-align: center;
+}
+
+
+.btn-projets{
+    font-weight: bold;
+}
+
+
+
+
+/* SKILLS */
+
+.section-range{
+    height: 580px;
+}
+
+.grille-skills{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(3,1fr);
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    background-color: #FFFDF7;
+    margin-left: 270px;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+.skills-column1{
+    grid-row: 1/3;
+}
+
+.skills-column2{
+    grid-column: 2;
+}
+
+.img-medias3{
+    width: 300px;
+    
+}
+
+
+/* CONTACT */
+
+.section-contact{
+    background-color: #FFFDF7;
+    height: 800px;
+}
+
+.container-form{
+    background-color: #FFFDF7;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+.form-bloc{
+   
+    color: black;
+    margin: 14px;
+    padding: 15px;
+    
+}
+
+.form-groupe{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+}
+
+.form-groupe label{
+    font-size: 30px;
+}
+
+.form-groupe input{
+    width: 800px;
+}
+
+.button-sub{
+    background-color: white;
+    color: black;
+    font-weight: bold;
+    position: absolute;
+    left: 50%;
+    width: 200px;
+}
+
+
+
+/* EXPERIENCES */
+
+.flex-cont-bloc-exp{
+    display: block;
+}
