--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,12 @@ body {
 /*  <!-- Navigation verticale / Left Fixed Navbar --> */
 
 .nav-gauche {
-    width: 260px;
+    width: 250px;
     min-height: 700px;
     background:#0A2342;
+    background-position: right;
     position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     border-right: 1px dashed black;
@@ -59,9 +61,7 @@ a:link {
 }
 
 
-.bloc.photo{
-    grid-template-columns: d;
-}
+
 
 .bloc-items{
     display: flex;
@@ -94,7 +94,7 @@ a:link {
 /************************ HOME SECTION **********************/
 
 .accueil {
-    background-image: url(/images/backgroundimage.png);
+    background-image: url(/images/background-portfolio.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right;
@@ -112,7 +112,6 @@ a:link {
     width: calc(100% - 300px + 50px);
     position: relative;
     margin-left: auto;
-    border: 3px solid black;
     font-family: 'Ubuntu', sans-serif;
 
 }
@@ -151,8 +150,8 @@ a:link {
 h1 {
     font-size: 90px;
     font-family: 'Oswald', sans-serif;
-    margin: 0 100px;
     padding-top: 210px;
+    margin-left: 40px;
 }
 
 h2 {
@@ -250,11 +249,9 @@ h2 {
 }
 
 .btn-rond {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
     position: absolute;
-    bottom: 80px;
-    left: 50%;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -263,6 +260,8 @@ h2 {
     box-shadow: 0 0 0 0 #333;
     background: black;
     animation: pulse 1.3s infinite;
+    margin-top: 240px;
+    margin-left: 40px;
 }
 
 @keyframes pulse {
@@ -280,12 +279,14 @@ h2 {
 .section-experiences{
     background-color: #FFFDF7;
     width: calc(100% - 260px) ;
-    margin-left: 300px;   
+    margin-left: 250px;   
     height: 600px; 
-    border: 2px solid #333;
 
 }
 
+.pers-bref{
+    font-size: 32px;
+}
 
 .pres-experiences{
     display: grid;
@@ -294,7 +295,8 @@ h2 {
     justify-items: center;
     justify-content: space-around;
     position: relative;
-    margin-top: 60px;
+    margin-top: 50px;
+    margin-left: 30px;
     font-size: 28px;
 
 }
@@ -351,39 +353,6 @@ h2 {
 
 
 
-/* SKILLS */
-
-.section-range{
-    height: 580px;
-}
-
-.grille-skills{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(3,1fr);
-    justify-content: center;
-    align-items: center;
-    height: 300px;
-    background-color: #FFFDF7;
-    margin-left: 270px;
-    font-weight: bold;
-    font-size: 22px;
-}
-
-.skills-column1{
-    grid-row: 1/3;
-}
-
-.skills-column2{
-    grid-column: 2;
-}
-
-.img-medias3{
-    width: 300px;
-    
-}
-
-
 /* CONTACT */
 
 .section-contact{
@@ -435,6 +404,103 @@ h2 {
 
 /* EXPERIENCES */
 
-.flex-cont-bloc-exp{
-    display: block;
+.cont-exp-travail{
+    margin-left: 270px;
+    margin-top: 30px;
+    display:grid;
+    grid-template-columns: 1fr 3fr;
+
 }
+
+.barre-verticale{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contenu-bloc{
+    justify-content: space-between;
+}
+.boule-ico{
+    border: 3px solid black;
+
+}
+
+.bloc-bloc {
+    margin-top: 20px;
+    margin-bottom: 65px;
+}
+
+.titre-section-bloc{
+    font-weight: bold;
+    font-size: 24;
+    margin-bottom: 5px;
+}
+
+
+
+
+/* SKILLS */
+
+
+.grille-skill{
+    background-color: #FFFDF7;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    background-color: #FFFDF7;
+    margin-left: 330px;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+.range-cont{
+    position: relative;
+}
+
+
+.barre-grises{
+    background-color: rgb(211, 211, 211);
+    height: 30px;
+    width: 400px;
+    border: 2px solid black;
+    border-radius: 15px;
+    position: relative;
+}
+
+
+.barre-skill{
+    background-color: black;
+    position: absolute;
+    border-radius: 15px;
+    height: 30px;
+    z-index: 10;
+}
+
+.b1{
+    width: 360px;
+}
+
+.b2{
+    width: 320px;
+}
+
+.b3{
+    width: 300px;
+}
+
+.b4{
+    width: 240px;
+}
+
+.b5{
+    width: 200px;
+}
+
+.b6{
+    width: 280px;
+
+}
+
