--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+
 }
 
 html {
@@ -100,7 +101,6 @@ a:link {
     height: 100vh;
     width: calc(100% - 300px + 50px);
     margin-left: auto;
-    position: relative;
 }
 
 .presentation{
@@ -455,6 +455,7 @@ textarea{
     margin-left: 330px;
     font-weight: bold;
     font-size: 22px;
+    column-gap: 20px;
 }
 
 .range-cont{
@@ -761,10 +762,16 @@ textarea{
         width: 100px;
     }
 
+}
+
+@media only screen and (min-width: 770px) and (max-width: 1118px) {
 
 
-@media only screen and (min-width: 770px) and (max-width: 1137px)
-{
+    body {
+        font-family: 'Roboto', sans-serif;
+        background-color: #FFFDF7;
+    }
+
     .nav-gauche {
         width: 200px;
         background:#0A2342;
@@ -790,15 +797,15 @@ textarea{
         font-weight: bold;
         text-decoration: underline;
         text-align: left;
+        width: 100%
     }
 
-    .accueil{
-        margin-top: -65px;
-        background-position: bottom;
-        height: 800px;
+    .accueil {
+        position: relative;
+        background-size: cover;
+        margin: 0px;
+        width:120%
     }
-
-
 
     .pres-gauche {
         display: flex;
@@ -826,22 +833,24 @@ textarea{
 
     .boutons-accueil{
         position:relative;
-        left: 10%;
-        top: 20%;
+        right: 20px;
         color: #dfdfdf;
+        size: 120%;
+        top: 20px;
     }
 
 
     .medias{
         position: relative;
-        top: 20%;
-        right: 40%
+        right: 76%;
+        top: 20px;
+    
     }
 
     .btn-rond{
         position: relative;
-        top: 7%;
-        left: 76%;
+        bottom: 30px;
+        left: 30px;
     }
 
     .titre-accueil{
@@ -853,6 +862,12 @@ textarea{
 
     /* ABOUT ME */ 
 
+    .presentation{
+        margin:0;
+        width:100%;
+
+    }
+
     .pres-bref{
         font-size: 22px;
     }
@@ -861,39 +876,48 @@ textarea{
 
     .section-experiences{
         background-color: #FFFDF7;
-        width: calc(100% - 260px) ;
-        height: 1100px; 
-    
-    }
-    
-    
-    .pres-experiences{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-        grid-template-rows: repeat(3,1fr);
-        font-size: 24px;
-        align-content: space-between;
-        justify-content: space-between;
+        margin: 0px;
+        width: 100%;
+        height: 580px; 
 
+    
     }
+    
+
+    .pres-experiences{
+
+        margin: 0;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: auto;
+
+        justify-items: center;
+        justify-content: space-around;
+        position: relative;
+        margin-top: 50px;
+        font-size: 22px;
+    }
+
 
     .img-medias2{
-        size: 200px;
-        margin-left: 150px;
-        margin-bottom: 50px;
-        margin-top: -80px;
+        size: 100px;
+        margin:0
+   
     }
 
     /*PORTFOLIO*/
     
     .portfolio{
-        height: 2500px;
+        margin:0px;
+        width: 100%;
+        height: 1420px;
         background-color: #FFFDF7;
     }
 
     .cont-portfolio{
         display: grid;
-        grid-template-columns: repeat(1,1fr);
+        grid-template-columns: repeat(2,1fr);
         grid-template-rows: auto;
         grid-row-gap: 30px;
     
@@ -918,9 +942,6 @@ textarea{
     .btn-projets{
         font-weight: bold;
     }
-    
-    
-
 
 
     /*GRILLE SKILLS*/
@@ -928,7 +949,9 @@ textarea{
     .section-range{
         height: 780px;
         background-color: #dfdfdf;
-        margin-left: -10%;
+        margin:0px;
+        width: 100%;
+
     }
 
     .titre-exp{
@@ -948,6 +971,8 @@ textarea{
     /* EXPERIENCES */
 
     .travail-exp{
+        margin: 0;
+        width: 100%;
         background-color: #FFFDF7;
     }
 
@@ -958,6 +983,11 @@ textarea{
     .bloc-bloc {
         margin-top: 20px;
         margin-bottom: 52px;
+    }
+
+    .section-contact{
+        margin:0;
+
     }
 
 
@@ -1007,20 +1037,12 @@ textarea{
 
     .button-sub{
         background-color: white;
+        background-position-x: center;
+        background-size: cover;
         color: black;
         font-weight: bold;
         position: absolute;
         left: 40%;
         width: 100px;
     }
-
-
-
-
-
-
-
-
-
-
 }
